--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
 
+#### joe made this: http://goel.io/joe
+
+#####=== Sass ===#####
+
+.sass-cache
+*.css.map
+
