--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "_s",
-  "version": "0.1.0",
-  "description": "_s starter theme",
-  "main": "Gruntfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "name": "Whiteboard",
+  "version": "1.1.0",
+  "description": "WordPress theme starter for quick development.",
+  "scripts": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/thinkxl/_s"
+    "url": "https://github.com/thinkxl/whiteboard.git"
   },
   "keywords": [
     "WordPress",
-    "Starter",
-    "Grunt",
-    "sass"
+    "Gulp",
+    "Sass"
   ],
   "author": "Juan Olvera",
-  "license": "GPLv2",
-  "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-sass": "latest",
-    "grunt-contrib-watch": "~0.5.3",
-    "jit-grunt": "^0.8.0",
-    "matchdep": "~0.3.0"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/thinkxl/whiteboard/issues"
   },
-  "dependencies": {
-    "time-grunt": "^1.0.0",
-    "load-grunt-tasks": "^0.6.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-autoprefixer": "^1.0.1"
+  "homepage": "https://github.com/thinkxl/whiteboard",
+  "devDependencies": {
+    "babel-core": "^5.8.25",
+    "browser-sync": "^2.9.6",
+    "del": "^2.0.2",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.1",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.4",
+    "gulp-size": "^2.0.0",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.4.1"
   }
 }
