--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -138,9 +138,9 @@ linters:
 
   QualifyingElement:
     enabled: true
-    allow_element_with_attribute: false
-    allow_element_with_class: false
-    allow_element_with_id: false
+    allow_element_with_attribute: true
+    allow_element_with_class: true
+    allow_element_with_id: true
 
   SelectorDepth:
     enabled: true
