--- a/package.json
+++ b/package.json
@@ -1,43 +1,35 @@
 {
-  "name": "Whiteboard",
-  "version": "1.1.0",
-  "description": "WordPress theme starter for quick development.",
-  "scripts": {},
+  "name": "whiteboard",
+  "version": "1.0.0",
+  "description": "WordPress theme starter",
+  "main": "index.js",
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "laravel-elixir": "^6.0.0-15"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "laravel-elixir": "^6.0.0-15",
+    "laravel-elixir-browsersync-official": "^1.0.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thinkxl/whiteboard.git"
+    "url": "git+https://github.com/thinkxl/whiteboard.git"
   },
   "keywords": [
     "WordPress",
-    "Gulp",
-    "Sass"
+    "gulp",
+    "elixir",
+    "CSS",
+    "JavaScript"
   ],
   "author": "Juan Olvera",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/thinkxl/whiteboard/issues"
   },
-  "homepage": "https://github.com/thinkxl/whiteboard",
-  "devDependencies": {
-    "babel-core": "^5.8.25",
-    "browser-sync": "^2.9.6",
-    "del": "^2.0.2",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.1",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.3.0",
-    "gulp-inject": "^3.0.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^2.0.4",
-    "gulp-size": "^2.0.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.4.1",
-    "gulp-useref": "^2.0.1"
-  },
-  "dependencies": {
-    "wiredep": "^3.0.0-beta"
-  }
+  "homepage": "https://github.com/thinkxl/whiteboard#readme"
 }
