redesign mobile navigation

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,19 +2,16 @@
 
 root = true
 
-[*]
+[*.{php,js,css,json}]
+indent_style = tab 
+indent_size = 4
+
+[*.{scss}]
 indent_style = space
 indent_size = 2
+
+[*]
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true 
 insert_final_newline = true
-
-[*.md]
-trim_trailing_whitespace = false
-
-[*.py]
-indent_size = 4
-
-[{package.json, .vimrc}]
-indent_size = 2
