--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "cross-env": "^5.0.5",
     "laravel-mix": "^1.4.3",
-    "node-sass": "^4.5.3"
+    "node-sass": "^4.5.3",
+    "rsync": "^0.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
