--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,3 +1,5 @@
 {
-    "/style.css": "/style.css"
+    "/js/scripts.js": "/js/scripts.js",
+    "/style.css": "/style.css",
+    "/woocommerce.css": "/woocommerce.css"
 }
