--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.0.0",
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
+    "jquery": "^3.3.1",
     "popper.js": "^1.12.5"
   },
   "devDependencies": {
